# intro-embdedded-rust

./: README.md
cdl2022-attiny/: .gitignore
cdl2022-attiny/.cargo/: avr-attiny85.json  run.sh
cdl2022-esp32/.cargo/: config.toml
intro-attiny/: Cargo.toml  README.md
intro-attiny/.cargo/: config.toml
intro-attiny/schematics/: attiny.fzz
intro-esp32/: .gitignore  Cargo.toml  README.md
intro-esp32/.cargo/: config.toml
intro-esp32/assets/: style.css
intro-esp32/config/: wifi-example.txt
intro-esp32/schematics/: esp32.fzz
