[package]
name = "cdl2022-esp32"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
#pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = {version = "1"}
log = "0.4"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
#esp_idf = "0.1.1"
esp-idf-svc = "0.42.5"
esp-idf-hal = "0.38.1"
#esp-idf-part = "0.1.1"

ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
embedded-svc = "0.22.3"
embedded-hal = "0.2"
#smol = "1.2.5"

#[patch.crates-io]
#smol = { git = "https://github.com/esp-rs-compat/smol" }
#polling = { git = "https://github.com/esp-rs-compat/polling" }
#socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
#getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }
#embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

