[package]
name = "intro-esp32"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
anyhow = {version = "1"}
log = "0.4"
build-time = "0.1"

esp-idf-sys = { version = "0.33", features = [
    "binstart"
]}

esp-idf-svc = { version = "0.46", features = [
    "std",
    "nightly",
    "experimental",
    "embassy-time-driver",
    "embassy-time-isr-queue",
    "alloc"
]}

esp-idf-hal = { version = "0.41", features = [
    "default",
    "embassy-sync",
    "critical-section",
    "edge-executor"
]}

ssd1306 = "0.7.1"
embedded-graphics = "0.7"
embedded-svc = "0.25"
embedded-hal = "0.2"
display-interface = "0.4"

[build-dependencies]
embuild = "0.31"
